--- a/home/templates/home/edit.html
+++ b/home/templates/home/edit.html
@@ -163,15 +163,8 @@
     $('#save-btn').on('click', function(event) {
         event.preventDefault();  // предотвращает стандартное действие формы
 
-        let formData = new FormData();
-        $('form').each(function() {
-            let form = $(this)[0];
-            let formFields = new FormData(form);
-
-            for (let pair of formFields.entries()) {
-                formData.append(pair[0], pair[1]);
-            }
-        });
+        let form = $('form')[0];  // Предполагается, что на странице одна форма
+        let formData = new FormData(form);
 
         formData.append('status', $('input[name="options"]:checked').parent().text().trim());
 
@@ -181,7 +174,7 @@
             data: formData,
             processData: false,
             contentType: false,
-            headers: {'X-CSRFToken': csrftoken},  // csrf token должен быть заранее определен
+            headers: {'X-CSRFToken': csrftoken}, 
             success: function(response) {
                 alert('Changes saved successfully!');
             },
@@ -194,6 +187,49 @@
 
 </script>
 
+<script>
+  $(document).ready(function() {
+      function getCookie(name) {
+          let cookieValue = null;
+          if (document.cookie && document.cookie !== '') {
+              const cookies = document.cookie.split(';');
+              for (let i = 0; i < cookies.length; i++) {
+                  const cookie = cookies[i].trim();
+                  if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                      cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                      break;
+                  }
+              }
+          }
+          return cookieValue;
+      }
+
+      const csrftoken = getCookie('csrftoken');
+
+      $('input').on('blur', function() {
+          var inputName = $(this).attr('name');
+          var inputValue = $(this).val();
+          var computerId = {{ computer.id }};
+
+          $.ajax({
+              url: "{% url 'save_computer_data' %}",
+              method: 'POST',
+              headers: { 'X-CSRFToken': csrftoken },
+              data: {
+                  'field_name': inputName,
+                  'field_value': inputValue,
+                  'computer_id': computerId,
+              },
+              success: function(response) {
+                  console.log('Field ' + inputName + ' saved successfully');
+              },
+              error: function(xhr, status, error) {
+                  console.error('Error saving field ' + inputName + ': ' + error);
+              }
+          });
+      });
+  });
+</script>
   
   
 
@@ -281,12 +317,12 @@
                 <div class="col-sm-4">
                   <div class="form-group">
                     <label>Placement</label>
-                    <input list="locationList" id="locationInput" name="Location" class="form-control" 
+                    <input list="locationList" id="locationInput" name="locations_name" class="form-control" 
                           value="{{ form.location_name.value }}" placeholder="Placement" 
                           style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
                     <datalist id="locationList">
                       {% for location in location_queryset %}
-                      <option value="{{ location.name }}">
+                      <option value="{{ location.name }}">{{ location.name }}</option>
                       {% endfor %}       
                     </datalist>
                     
@@ -478,25 +514,26 @@
                     <div class="col-sm-3">
                       <div class="form-group">
                         <label>RAM GB</label>
-                        <select class="form-control select" name="Ram" style="width: 100%;">   
-                          {% for ram in ram_queryset %}                
-                          <option value="{{ ram.gigabytes }}">{{ ram.gigabytes }}</option>   
+                        <select class="form-control select" name="ram_gigabytes"  style="width: 100%;">   
+                          {% for choice in ram_gigabytes %}                
+                          <option value="{{ choice }}">{{ choice }}</option>   
                           {% endfor %}               
                         </select> 
 
-                       
+                        
+                        
                       </div>
                     </div>
                     <div class="col-sm-9">
                       <div class="form-group">
                         <label>RAM type</label>
 
-                        <input list="ramList" id="ramsInput" name="ram" class="form-control" 
+                        <input list="ramList" id="ramsInput" name="ram_type" class="form-control" 
                           value="{{ form.ram_type.value }}" placeholder="RAM type" 
                           style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
                       <datalist id="ramList">
-                        {% for ram in ram_queryset %}
-                          <option value="{{ ram.type }}">
+                        {% for choice in ram_types %}
+                          <option value="{{ choice }}">
                         {% endfor %}       
                       </datalist>
 
@@ -509,9 +546,9 @@
                     <div class="col-sm-3">
                       <div class="form-group">
                         <label>Disk GB</label>
-                        <select class="form-control select" name="diskGB" style="width: 100%;">
-                          {% for hardDisk in hardDisk_queryset %}
-                            <option value="{{ hardDisk.gigabytes }}">{{ hardDisk.gigabytes }}</option>
+                        <select class="form-control select" name="disk_gigabytes" style="width: 100%;">
+                          {% for choice in hardDisk_gigabytes %}
+                            <option value="{{ choice }}">{{ choice }}</option>
                           {% endfor %}
                         </select>
                       </div>
@@ -520,12 +557,12 @@
                       <div class="form-group">
                         <label>Hard disk type</label>
 
-                        <input list="hardDiskList" id="hardDisksInput" name="hardDisk" class="form-control" 
+                        <input list="hardDiskList" id="hardDisksInput" name="disk_type" class="form-control" 
                           value="{{ form.hardDisk_type.value }}" placeholder="Hard disk type" 
                           style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
                       <datalist id="hardDiskList">
-                        {% for hardDisk in hardDisk_queryset %}
-                          <option value="{{ hardDisk.type }}">
+                        {% for choice in hardDisk_types %}
+                          <option value="{{ choice }}">
                         {% endfor %}       
                       </datalist>
 
@@ -683,12 +720,12 @@
                   
                     <div class="form-group">
                       <label>Additional settings</label>
-                      <input list="addSettingList" id="addSettingsInput" name="addSetting" class="form-control" 
+                      <input list="addSettingList" id="addSettingsInput" name="addSettings_name" class="form-control" 
                           value="{{ form.addSettings_name.value }}" placeholder="Additional settings" 
                           style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
                       <datalist id="addSettingList">
                         {% for addSettings in addSettings_queryset %}
-                          <option value="{{ addSettings.name }}">
+                          <option value="{{ addSettings.name }}">{{ addSettings.name }}</option>
                         {% endfor %}       
                       </datalist>
 
@@ -703,7 +740,7 @@
                     <div class="form-group">
                       <label>Additional settings</label>
                       
-                        <input type="text" class="form-control mb-3" placeholder="Additional settings" name="addSettingsText" value="{{ form.addSettings_text.value }}">                   
+                        <input type="text" class="form-control mb-3" placeholder="Additional settings" name="addSettings_text" value="{{ form.addSettings_text.value }}">                   
                     
                     </div>
                   
