--- a/home/templates/home/computer_detail.html
+++ b/home/templates/home/computer_detail.html
@@ -472,7 +472,7 @@
                           <div class="input-group-prepend">
                             <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
                           </div>
-                          <input type="text" class="form-control" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" data-mask value="{{ computer.date|date:'d/m/Y' }}">
+                          <input type="text" class="form-control" value="{{ computer.date|date:'M d, Y' }}" disabled="disabled">
                         </div>
                       </div>
                     
