users work, i will try to add settings

--- a/home/templates/home/edit.html
+++ b/home/templates/home/edit.html
@@ -257,7 +257,7 @@
           
           var uniqueId = new Date().getTime();
 
-          // Добавляем скрытое поле для нового пользователя
+          // Добавляем скрытое поле для нового пользователя 11111
           $('<input>').attr({
               type: 'hidden',
               name: 'new_user_' + uniqueId,
